fix(Landing): fix overflow text and missing address

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1186,6 +1186,11 @@ video {
 .overflow-y-scroll {
   overflow-y: scroll;
 }
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .whitespace-nowrap {
   white-space: nowrap;
 }
